--- a/com.boxfriend.utils/package.json
+++ b/com.boxfriend.utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.boxfriend.utils",
   "displayName": "Boxfriend's Utils",
-  "version": "1.0.9",
+  "version": "1.0.9-hotfix",
   "unity": "2021.1",
   "author": {
     "name": "Boxfriend",
