--- a/com.boxfriend.utils/package.json
+++ b/com.boxfriend.utils/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.boxfriend.utils",
   "displayName": "Boxfriend's Utils",
-  "version": "1.0.9-hotfix",
-  "unity": "2021.1",
+  "version": "2.0.0",
+  "unity": "6000.0",
   "author": {
     "name": "Boxfriend",
     "url": "https://github.com/boxfriend"
